--- a/Sokoban game/packages.config
+++ b/Sokoban game/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DynamicLanguageRuntime" version="1.2.3-alpha0" targetFramework="net472" />
   <package id="IronPython" version="2.7.10-alpha0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
