added copy constructor to STATE

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 sokoban-python/Soko4.txt
 .vscode/c_cpp_properties.json
 .vscode/settings.json
+.vs/Sokoban game/v16/Browse.VC.db
+.vs/Sokoban game/v16/Browse.VC.db
