.gitignore updated, bfs, dfs, and ids and more fixed
-Added more unnecessary file extentions to .gitignore, you're welcome :)
-The == operator for STATE struct was fixed and now works in DFS too
-removed previous dfs() functions and added another one which works quite well and is NOT recursive
-Ids was rewritten in order to work with the new dfs()
-Now all the of the search functions (bfs, dfs, ids) get these two parameters: 1)history_size 2)count (in order to count the states visited during search

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 sokoban-python/Soko4.txt
 .vscode/c_cpp_properties.json
 .vscode/settings.json
+/.vs/Sokoban game/v16/ipch/AutoPCH/cfce3009195988b0/SOKOBANCORE.ipch
+Browse.VC.db
+storage.ide-wal
 *.tlog
 *.xml
 *.cache
@@ -13,3 +16,13 @@ sokoban-python/Soko4.txt
 *.db
 *.suo
 *.log
+*.db
+*.VC.db
+*.opendb
+*.ipch
+*.ide-shm
+*.ide.wal
+*.db-shm
+*.db-wal
+.vs/Sokoban game/v16/Browse.VC.db
+*.ipch
