--- a/Sokoban game/Sokoban game.csproj
+++ b/Sokoban game/Sokoban game.csproj
@@ -74,6 +74,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DLS_DFS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DLS_DFS.Designer.cs">
+      <DependentUpon>DLS_DFS.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DLS_DFS.resx">
+      <DependentUpon>DLS_DFS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
     </EmbeddedResource>
